--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,8 +8,10 @@ tasks:
       unzip awscliv2.zip
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
+      gp sync-done aws
   - name: Initialize Frontend and Backend
     init: |
+      gp sync-await aws
       cd /workspace/aws-bootcamp-cruddur-2023/backend-flask
       pip3 install -r requirements.txt
       cd /workspace/aws-bootcamp-cruddur-2023/frontend-react-js
