--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -27,4 +27,4 @@ vscode:
   extensions:
     - 42Crunch.vscode-openapi
     - ms-azuretools.vscode-docker
-    - ms-pythom.python
+    - ms-python.python
