--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./backend-flask:/backend-flask
   frontend-react-js:
     environment:
-      REACT_APP_BACKEND_URL: "127.0.0.1:4567"
+      REACT_APP_BACKEND_URL: "http://127.0.0.1:4567"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
