--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -28,3 +28,4 @@ vscode:
     - 42Crunch.vscode-openapi
     - ms-azuretools.vscode-docker
     - ms-python.python
+    - cweijan.vscode-postgresql-client2
