--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -32,6 +32,12 @@ tasks:
       gp sync-await aws
       docker run -d --name dd-agent -v /var/run/docker.sock:/var/run/docker.sock:ro -v /proc/:/host/proc/:ro -v /sys/fs/cgroup/:/host/sys/fs/cgroup:ro -e DD_API_KEY="${DD_API_KEY}" -e DD_SITE="us5.datadoghq.com" gcr.io/datadoghq/agent:7
       exit
+  - name: fargate
+    before: |
+      curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "session-manager-plugin.deb"
+      sudo dpkg -i session-manager-plugin.deb
+      session-manager-plugin
+      cd "$THEIA_WORKSPACE_ROOT/backend-flask/"
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
