--- a/bin/frontend/build
+++ b/bin/frontend/build
@@ -2,9 +2,7 @@
 
 
 ABS_PATH=$(readlink -f "$0")
-BUILD_PATH=$(dirname $ABS_PATH)
-DOCKER_PATH=$(dirname $BUILD_PATH)
-BIN_PATH=$(dirname $DOCKER_PATH)
+BIN_PATH=$(dirname $ABS_PATH)
 PROJECT_PATH=$(dirname $BIN_PATH)
 FRONTEND_REACT_JS_PATH="$PROJECT_PATH/frontend-react-js"
 
