--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -19,6 +19,7 @@ tasks:
     command: |
       export GITPOD_IP=$(curl ifconfig.me)
       source  "$THEIA_WORKSPACE_ROOT/bin/rds/update-sg-rule"
+      source  "$THEIA_WORKSPACE_ROOT/bin/ecr/login"
   - name: Initialize Frontend and Backend
     init: |
       gp sync-await aws
