--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ tasks:
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
-    init: |
+    before: |
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
@@ -11,7 +11,7 @@ tasks:
       gp sync-done aws
       exit
   - name: postgres
-    init: |
+    before: |
       curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
@@ -21,7 +21,7 @@ tasks:
       source  "$THEIA_WORKSPACE_ROOT/bin/rds/update-sg-rule"
       source  "$THEIA_WORKSPACE_ROOT/bin/ecr/login"
   - name: Initialize Frontend and Backend
-    init: |
+    before: |
       gp sync-await aws
       cd /workspace/aws-bootcamp-cruddur-2023/backend-flask
       pip3 install -r requirements.txt
@@ -29,7 +29,7 @@ tasks:
       npm i    
       exit
   - name: datadog
-    init: |
+    before: |
       gp sync-await aws
       docker run -d --name dd-agent -v /var/run/docker.sock:/var/run/docker.sock:ro -v /proc/:/host/proc/:ro -v /sys/fs/cgroup/:/host/sys/fs/cgroup:ro -e DD_API_KEY="${DD_API_KEY}" -e DD_SITE="us5.datadoghq.com" gcr.io/datadoghq/agent:7
       exit
