--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,25 @@
 version: "3.8"
 services:
   backend-flask:
-    environment:
-      #AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
-      #CONNECTION_URL: "${PROD_CONNECTION_URL}"
-      CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
-      FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
-      OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
-      OTEL_SERVICE_NAME: "backend-flask"
-      AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
-      AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
-      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
-      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-      AWS_XRAY_SDK_ENABLED: "False"
-      ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
-      AWS_COGNITO_USER_POOL_ID: "us-east-1_cVIhSJWoR"
-      AWS_COGNITO_USER_POOL_CLIENT_ID: "17ip4u819unv7ri1ulm8cahci0" 
+    env_file:
+      - backend-flask.env
     build: ./backend-flask
     ports:
       - "4567:4567"
     volumes:
       - ./backend-flask:/backend-flask
+    networks:
+      - cruddur-net
   frontend-react-js:
-    environment:
-      REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_cVIhSJWoR"
-      REACT_APP_CLIENT_ID: "17ip4u819unv7ri1ulm8cahci0"
-      REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+    env_file:
+      - frontend-react-js.env
     build: ./frontend-react-js
     ports:
       - "3000:3000"
     volumes:
       - ./frontend-react-js:/frontend-react-js
+    networks:
+      - cruddur-net
   db:
     image: postgres:13-alpine
     restart: always
@@ -46,16 +30,21 @@ services:
       - '5432:5432'
     volumes: 
       - db:/var/lib/postgresql/data
-  #xray-daemon:
-    #image: "amazon/aws-xray-daemon"
-    #environment:
-    #  AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-     # AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-    #  AWS_REGION: "us-east-1"
-    #command:
-    #  - "xray -o -b xray-daemon:2000"
-    #ports:
-    #  - 2000:2000/udp
+    networks:
+      - cruddur-net
+  xray-daemon:
+    hostname: xray-daemon
+    image: "amazon/aws-xray-daemon"
+    environment:
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_REGION: "us-east-1"
+    command:
+      - "xray -o -b xray-daemon:2000"
+    ports:
+      - 2000:2000/udp
+    networks:
+      - cruddur-net
   dynamodb-local:
     # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
     # We needed to add user:root to get this working.
@@ -67,13 +56,14 @@ services:
       - "8000:8000"
     volumes:
       - "./docker/dynamodb:/home/dynamodblocal/data"
+    networks:
+      - cruddur-net
     working_dir: /home/dynamodblocal
 # the name flag is a hack to change the default prepend folder
 # name when outputting the image names
-networks: 
-  internal-network:
-    driver: bridge
-    name: cruddur
+networks:
+  cruddur-net:
+    name: cruddur-net
 
 volumes:
   db:
