Add generate-env on startup

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -23,6 +23,8 @@ tasks:
   - name: Initialize Frontend and Backend
     before: |
       gp sync-await aws
+      source  "$THEIA_WORKSPACE_ROOT/bin/frontend/generate-env"
+      source  "$THEIA_WORKSPACE_ROOT/bin/backend/generate-env"
       cd /workspace/aws-bootcamp-cruddur-2023/backend-flask
       pip3 install -r requirements.txt
       cd /workspace/aws-bootcamp-cruddur-2023/frontend-react-js
